# rp2040-ili9225

./: CMakeLists.txt  LICENSE  README.md
libs/: CMakeLists.txt
libs/ili9225/: CMakeLists.txt
libs/ili9225/src/: ili9225.c
libs/ili9225/src/include/: ili9225.h
tests/: CMakeLists.txt
tests/hello-display/: CMakeLists.txt  main.c
tests/hello-dma/: CMakeLists.txt  main.c
